                             AND (topology!="gbest" | method!="pso")
                          -) new 'random.update' parameter for the 'control' variable, in order to allow random update of personal/global best
                          -) default value of the inertia weight 'IW' was changed from (linearly decreasing) IW.w= c(1.2, 0.4) to 'IW.w=1/(2*log(2))'
                          -) source code was tidy up
                             
0.1-56	14-Jun-2012
        o 'hydroPSO'    : -) much less memory consumption for large values of 'maxit' and/or 'npart' (thanks to  Paul Smith for reporting it !)
                             The files 'BestParamPerIter.txt', 'PbestPerIter.txt', 'LocalBestPerIter.txt', 'Velocities.txt' are now written at the end of 
                             each iteration, and not at the end of the main algorithm (so the corresponding local variables were removed)
                          -) the convergence of the algorithm controlled by 'reltol' is now defined by : abs(reltol) <= abs(best.pbest[iter] - best.pbest[iter-1]), 
                             instead of reltol <= [ gbest(iter) / ( gbest(iter-1) +reltol ) ]
                          -) 'PbestPerIter.txt' output file: now it has an additional first column labelled "Iter", with the iteration number
                          -) 'LocalBestPartPerIter.txt' output file: now it has an additional first column labelled "Iter", with the iteration number
                          -) 'BestParamPerIter.txt' output file: now it has an additional first column labelled "Iter", with the iteration number.
                             The column with the goodness-of-fit measure ('GoF') was changed from the last position to the second one 
                             (just after the new 'Iter' column)
                          -) minor change: 'gbest.fit.prior' is now initialized in 'gbest.fit' instead of 'gbest.fit + 10*reltol'