@@ -7,6 +7,12 @@ NEWS/ChangeLog for hydroPSO
                              AND (topology!="gbest" | method!="pso")
                           -) new 'random.update' parameter for the 'control' variable, in order to allow random update of personal/global best
                           -) default value of the inertia weight 'IW' was changed from (linearly decreasing) IW.w= c(1.2, 0.4) to 'IW.w=1/(2*log(2))'
+                          -) default value for the time-varying c1 was changed from (non-linearly decreasing) 'TVc1.rng= c(2.2, 1.8)' to 
+                             'TVc1.rng= c(1.28, 1.05)'. However, by default 'use.TVc1= FALSE' still.
+                          -) default value for the time-varying c2 was changed from (non-linearly increasing) 'TVc1.rng= c(1.8, 2.2)' to 
+                             'TVc2.rng= c(1.05, 1.28)'. However, by default 'use.TVc2= FALSE' still.
+                          -) default value for the time-varying lambda was changed from (non-linearly decreasing) 'TVlambda.rng= c(0.9, 0.1)' to 
+                             'TVlambda.rng= c(1, 0.25)'. However, by default 'use.TVlambda= FALSE'
                           -) source code was tidy up
                              
 0.1-56	14-Jun-2012
